--- a/style/deco.css
+++ b/style/deco.css
@@ -56,8 +56,8 @@
 
 /*  CLOCK  */
 .clock {
-  grid-column: 2/3;
-  grid-row: 1/3;
+  /* grid-column: 2/3;
+  grid-row: 1/3; */
   width: 12rem;
   height: 12rem;
   justify-self: center;
@@ -149,17 +149,15 @@
 
 /*  PLAY BUTTON  */
 .circle {
-  grid-column: 2/3;
-  grid-row: 4/6;
   width: 9rem;
-  height: 100%;
+  /* height: 100%; */
   justify-self: center;
   border-radius: 1rem;
   display: grid;
   grid-template-rows: 1fr;
   justify-items: center;
   align-items: center;
-}
+  }
 .circle__btn {
   grid-row: 1/2;
   grid-column: 1/2;
@@ -171,12 +169,13 @@
   align-items: center;
   border-radius: 50%;
   font-size: 3.2rem;
-  color: var(--primary);
+  color: var(--primary-dark);
   z-index: 300;
   background: var(--greyLight-1);
   box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
   cursor: pointer;
   position: relative;
+  border: none;
 }
 .circle__btn.shadow {
   box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
@@ -284,14 +283,17 @@
 
 /*  ICONS  */
 .icon {
-  grid-column: 3/4;
-  grid-row: 4/5;
+  /* grid-column: 3/4;
+  grid-row: 4/5; */
   display: flex;
   justify-content: space-between;
+  margin-top: 400px;
 }
 .icon__account, .icon__home, .icon__settings {
-  width: 4rem;
-  height: 4rem;
+  /* width: 4rem;
+  height: 4rem; */
+  width: 80px;
+  height: 40px;
   border-radius: 50%;
   box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
   display: flex;
@@ -301,6 +303,8 @@
   cursor: pointer;
   color: var(--greyDark);
   transition: all 0.5s ease;
+  margin: 30px;
+  padding: 40px;
 }
 .icon__account:active, .icon__home:active, .icon__settings:active {
   box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
