--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,7 @@
 body {
     background-image: url('../pic/רקע.png');
     background-image: url('../pic/רקע\ גיפ.gif');
+    background-image: url('../pic/רקע\ חדש\ מושלג.gif');
     /* overflow-y: hidden; */
     background-size: cover;
     background-repeat: no-repeat;
